Fix logo-brand overlapping nav-links in IE...
IE is rendering navbar-brand (svg KCC logo) too far right, and overlaping other nav items:
-  `right: unset;` is not recognized by IE 11. Use `right: auto;` instead.

--- a/assets/scss/1-base/_header-global.scss
+++ b/assets/scss/1-base/_header-global.scss
@@ -242,7 +242,7 @@
 @media screen and (min-width: 992px) {
   .header-global__brand {
     top: 3.125rem;
-    right: unset;  // gotta unset this, otherwise it blocks the other navbar links
+    right: auto; // gotta set this to "auto" otherwise, it blocks the other navbar links
   }
 }
 
